[package]
name = "rust-gif"
version = "0.1.0"
authors = ["Ali Milhim <ali.milhim@powtoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
gif = "0.10.3"
gif-dispose = "2.2.0"
png = "0.16.1"



[[bin]]
name = "mybin"
path = "src/mybin.rs"
