[package]
name = "mylib"
version = "0.1.0"
authors = ["Ali Milhim <ali.milhim@powtoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gif = "0.10.3"
gif-dispose = "2.2.0"
wasm-bindgen = "0.2"
#serde = "^1.0.59"
#serde_derive = "^1.0.59"
js-sys = "0.3.36"

#[dependencies.wasm-bindgen]
#version = "^0.2"
#features = ["serde-serialize"]


